# onlinebookstore

./: .env.example  .gitignore  00_START_HERE.md  BookCart_Test_Guide.html  CI_CD_INTEGRATION_GUIDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED.md  Makefile  NON_TECHNICAL_TEST_GUIDE.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY_TEST_SUITE_IMPLEMENTATION.md  SETUP_TEST_DATA.md  TESTING_GUIDE.md  add_test_data.py  add_test_data_auth.py  check_browsers.py  check_database.py  config.py  conftest.py  conftest_allure.py  debug_button.py  debug_button_click.py  debug_extended.py  debug_full_auth_flow.py  debug_gender_field.py  debug_javascript_submit.py  debug_login.py  debug_login_enter_key.py  debug_login_form_inspection.py  debug_login_keyboard_method.py  debug_logout_button.py  debug_logout_dropdown.py  debug_navigation.py  debug_page_load.py  debug_register_network.py  debug_register_page.py  (+17 more)
dom_snapshots/: home_elements.json  home_page.html  login_page.html  products_elements.json  products_page.html  register_elements.json  register_page.html
pages/: README.md  __init__.py  cart_page.py  checkout_page.py  home_page.py  login_page.py  product_detail_page.py  register_page.py
tests/: SECURITY_TESTS_QUICK_START.md  SECURITY_TEST_COVERAGE_MATRIX.md  SECURITY_TEST_SUITE_README.md  __init__.py  login_page.py  test_api.py  test_api_security.py  test_authentication.py  test_authorization_security.py  test_checkout.py  test_data_validation.py  test_payment_security.py  test_product_search.py  test_security_comprehensive.py  (+2 more)
(+5 files in other folders)
